--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=scapture
 spring.profiles.include=secret
+
+cloud.aws.credentials.accessKey={accessKey}
+cloud.aws.credentials.secretKey={secretKey}
+cloud.aws.s3.bucketName={bucketName}
+cloud.aws.region.static={region}
+cloud.aws.stack.auto-=false
+
