✨ 소셜로그인 구현 - JwtUtill 생성

--- a/scapture/build.gradle
+++ b/scapture/build.gradle
@@ -37,6 +37,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation 'org.sp ringframework.security:spring-security-oauth2-client'
+
+	// Jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.2'
+
 }
 
 tasks.named('test') {
