--- a/scapture/build.gradle
+++ b/scapture/build.gradle
@@ -32,11 +32,12 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	implementation 'org.sp ringframework.security:spring-security-oauth2-client'
+	//oauth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// Jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
