--- a/scapture/build.gradle
+++ b/scapture/build.gradle
@@ -40,10 +40,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// Jwt
-	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.12.2'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.2'
-
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // 최신 버전
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // 최신 버전
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // 최신 버전
 }
 
 tasks.named('test') {
