✨ Add createStadium Controller

--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -8,3 +8,9 @@ cloud.aws.credentials.secretKey={secretKey}
 cloud.aws.s3.bucketName={bucketName}
 cloud.aws.region.static={region}
 cloud.aws.stack.auto-=false
+
+#
+jwt.secret=${JWT_SECRET}
+jwt.redirect=${JWT_REDIRECT_URI}
+jwt.access-token.expiration-time=${ACCESS_TOKEN_EXPIRATION_TIME}
+jwt.refresh-token.expiration-time=${REFRESH_TOKEN_EXPIRATION_TIME}
