✨ Add S3 Upload Code

--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 spring.application.name=scapture
 spring.profiles.include=secret
 
+# DB
+spring.datasource.url = ${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# show SQL
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 #S3
-cloud.aws.credentials.accessKey={accessKey}
-cloud.aws.credentials.secretKey={secretKey}
-cloud.aws.s3.bucketName={bucketName}
-cloud.aws.region.static={region}
+cloud.aws.credentials.accessKey=${ACCESS_KEY}
+cloud.aws.credentials.secretKey=${SECRET_KEY}
+cloud.aws.s3.videoBucketName=${VIDEO_BUKET_NAME}
+cloud.aws.s3.imageBucketName=${IMAGE_BUKET_NAME}
+cloud.aws.region.static=${REGION}
 cloud.aws.stack.auto-=false
 
 #
