🩹 Modify application.properties

--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 
+# Hibernate Dialect ??
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 #S3
 cloud.aws.credentials.accessKey=${ACCESS_KEY}
 cloud.aws.credentials.secretKey=${SECRET_KEY}
@@ -18,8 +21,37 @@ cloud.aws.s3.imageBucketName=${IMAGE_BUKET_NAME}
 cloud.aws.region.static=${REGION}
 cloud.aws.stack.auto-=false
 
-#
+#JWT
 jwt.secret=${JWT_SECRET}
 jwt.redirect=${JWT_REDIRECT_URI}
 jwt.access-token.expiration-time=${ACCESS_TOKEN_EXPIRATION_TIME}
 jwt.refresh-token.expiration-time=${REFRESH_TOKEN_EXPIRATION_TIME}
+
+# OAuth2 settings for Google
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=${GOOGLE_SCOPE}
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
+spring.security.oauth2.client.registration.google.authorization-grant-type=${GOOGLE_AUTHORIZATION_GRANT_TYPE}
+
+# OAuth2 settings for Kakao
+spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
+spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_SECRET}
+spring.security.oauth2.client.registration.kakao.scope=${KAKAO_SCOPE}
+spring.security.oauth2.client.registration.kakao.redirect-uri=${KAKAO_REDIRECT_URI}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=${KAKAO_AUTHORIZATION_GRANT_TYPE}
+spring.security.oauth2.client.provider.kakao.authorization-uri=${KAKAO_AUTHORIZATION_URI}
+spring.security.oauth2.client.provider.kakao.token-uri=${KAKAO_TOKEN_URI}
+spring.security.oauth2.client.provider.kakao.user-info-uri=${KAKAO_USER_INFO_URI}
+spring.security.oauth2.client.provider.kakao.user-name-attribute=${KAKAO_USER_NAME_ATTRIBUTE}
+
+# OAuth2 settings for Naver
+spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID}
+spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_SECRET}
+spring.security.oauth2.client.registration.naver.scope=${NAVER_SCOPE}
+spring.security.oauth2.client.registration.naver.redirect-uri=${NAVER_REDIRECT_URI}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=${NAVER_AUTHORIZATION_GRANT_TYPE}
+spring.security.oauth2.client.provider.naver.authorization-uri=${NAVER_AUTHORIATION_URI}
+spring.security.oauth2.client.provider.naver.token-uri=${NAVER_TOKEN_URI}
+spring.security.oauth2.client.provider.naver.user-info-uri=${NAVER_USER_INFO_URI}
+spring.security.oauth2.client.provider.naver.user-name-attribute=${NAVER_USER_NAME_ATTRIBUTE}
