--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=${DB_PASSWORD}
 
 # show SQL
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Hibernate Dialect ??
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
