--- a/scapture/build.gradle
+++ b/scapture/build.gradle
@@ -43,6 +43,11 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // 최신 버전
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // 최신 버전
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // 최신 버전
+
+	//json
+	implementation 'org.json:json:20210307'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
 }
 
 tasks.named('test') {
