--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -28,7 +28,7 @@ jwt.access-token.expiration-time=${ACCESS_TOKEN_EXPIRATION_TIME}
 jwt.refresh-token.expiration-time=${REFRESH_TOKEN_EXPIRATION_TIME}
 
 # log level
-logging.level.root=DEBUG
+#logging.level.root=DEBUG
 
 # OAuth2 settings for Google
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
