✨ Add Modify User Image Logic

--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 cloud.aws.credentials.accessKey=${ACCESS_KEY}
 cloud.aws.credentials.secretKey=${SECRET_KEY}
 cloud.aws.s3.videoBucketName=${VIDEO_BUKET_NAME}
-cloud.aws.s3.imageBucketName=${IMAGE_BUKET_NAME}
+cloud.aws.s3.stadiumImageBucketName=${STADIUM_IMAGE_BUKET_NAME}
+cloud.aws.s3.userImageBucketName=${USER_IMAGE_BUKET_NAME}
 cloud.aws.region.static=${REGION}
 cloud.aws.stack.auto-=false
 
