🩹 Modify Upload file max size

--- a/scapture/src/main/resources/application.properties
+++ b/scapture/src/main/resources/application.properties
@@ -28,6 +28,10 @@ jwt.redirect=${JWT_REDIRECT_URI}
 jwt.access-token.expiration-time=${ACCESS_TOKEN_EXPIRATION_TIME}
 jwt.refresh-token.expiration-time=${REFRESH_TOKEN_EXPIRATION_TIME}
 
+# Multipart Size
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
+
 # OAuth2 settings for Google
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
